Fix wysiwyg invisible text on night mode

--- a/src/app/components/elements/ReplyEditor.scss
+++ b/src/app/components/elements/ReplyEditor.scss
@@ -7,6 +7,7 @@
     .public-DraftEditor-content {
       height: 20em;
       resize: vertical;
+      color: #333;
     }
   }
   .button {
